added bootstrap, ipsum

--- a/index.html
+++ b/index.html
@@ -9,16 +9,43 @@
 <body class="container">
 <div class="navbar navbar-fixed-top opague">
   <div class="navbar-inner">
-    <a class="brand" href="#">&nbsp;Brian Starke</a>
     <ul class="nav">
       <li class="active"><a href="#">Work</a></li>
-      <li><a href="#">Stuff</a></li>
-      <li><a href="#">Side Projects</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          Stuff I Built&nbsp;<b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a tabindex="-1" href="#">Search Engines</a></li>
+          <li><a tabindex="-1" href="#">Analytics UIs</a></li>
+          <li><a tabindex="-1" href="#">Web Scraping Platform</a></li>
+          <li><a tabindex="-1" href="#">Browser Extensions</a></li>
+          <li><a tabindex="-1" href="#">Data Aggregation</a></li>
+          <li><a tabindex="-1" href="#">Code Generation</a></li>
+          <li><a tabindex="-1" href="#">PubSub</a></li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          Where I Built It&nbsp;<b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a tabindex="-1" href="#">isocket</a></li>
+          <li><a tabindex="-1" href="#">Google</a></li>
+          <li><a tabindex="-1" href="#">Admeld</a></li>
+          <li><a tabindex="-1" href="#">Monitor110</a></li>
+          <li><a tabindex="-1" href="#">Nat'l Reading Styles Institute</a></li>
+          <li><a tabindex="-1" href="#">SuSS MicroTec</a></li>
+          <li><a tabindex="-1" href="#">IBM</a></li>
+        </ul>
+      </li>
     </ul>
   </div>
 </div>
 
 <div class="main-container">
+<h2>Stuff I Built</h2>
+<h4>Search Engines</h4>
 <p>
 Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
 </p>
@@ -61,5 +88,7 @@ Efficiently myocardinate market-driven innovation via open-source alignments. Dr
 <p>
 Phosfluorescently expedite impactful supply chains via focused results. Holistically generate open-source applications through bleeding-edge sources. Compellingly supply just in time catalysts for change through top-line potentialities.
 </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 </body>
 </html>
