work in progress, switching computers

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
           Stuff I Built&nbsp;<b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-          <li><a tabindex="-1" href="#">Search Engines</a></li>
-          <li><a tabindex="-1" href="#">Analytics UIs</a></li>
-          <li><a tabindex="-1" href="#">Web Scraping Platform</a></li>
-          <li><a tabindex="-1" href="#">Browser Extensions</a></li>
-          <li><a tabindex="-1" href="#">Data Aggregation</a></li>
-          <li><a tabindex="-1" href="#">Code Generation</a></li>
-          <li><a tabindex="-1" href="#">PubSub</a></li>
+          <li><a tabindex="-1" href="#search">Search Engines</a></li>
+          <li><a tabindex="-1" href="#analytics">Analytics UI</a></li>
+          <li><a tabindex="-1" href="#webauto">Web Scraping Platform</a></li>
+          <li><a tabindex="-1" href="#browser">Browser Extensions</a></li>
+          <li><a tabindex="-1" href="#datums">Data Aggregation</a></li>
+          <li><a tabindex="-1" href="#codegen">Code Generation</a></li>
         </ul>
       </li>
       <li class="dropdown">
@@ -30,13 +29,13 @@
           Where I Built It&nbsp;<b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-          <li><a tabindex="-1" href="#">isocket</a></li>
-          <li><a tabindex="-1" href="#">Google</a></li>
-          <li><a tabindex="-1" href="#">Admeld</a></li>
-          <li><a tabindex="-1" href="#">Monitor110</a></li>
-          <li><a tabindex="-1" href="#">Nat'l Reading Styles Institute</a></li>
-          <li><a tabindex="-1" href="#">SuSS MicroTec</a></li>
-          <li><a tabindex="-1" href="#">IBM</a></li>
+          <li><a tabindex="-1" href="#isocket">isocket</a></li>
+          <li><a tabindex="-1" href="#google">Google</a></li>
+          <li><a tabindex="-1" href="#admeld">Admeld</a></li>
+          <li><a tabindex="-1" href="#monitor">Monitor110</a></li>
+          <li><a tabindex="-1" href="#nrsi">Nat'l Reading Styles Institute</a></li>
+          <li><a tabindex="-1" href="#suss">SuSS MicroTec</a></li>
+          <li><a tabindex="-1" href="#ibm">IBM</a></li>
         </ul>
       </li>
     </ul>
@@ -45,48 +44,83 @@
 
 <div class="main-container">
 <h2>Stuff I Built</h2>
+<a id='search'></a>
 <h4>Search Engines</h4>
 <p>
 Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
 </p>
+<a id='analytics'></a>
+<h4>Analytics UI</h4>
 <p>
 Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
 </p>
+<a id='webauto'></a>
+<h4>Web Scraping Platform</h4>
 <p>
 Completely synergize resource sucking relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.
 </p>
+<a id='browser'></a>
+<h4>Browser Extensions</h4>
 <p>
 Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.
 </p>
+<a id='datums'></a>
+<h4>Data Aggregation</h4>
 <p>
 Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products.
 </p>
+<a id='codegen'></a>
+<h4>Code Generation</h4>
 <p>
 Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.
 </p>
+
+<h2>Where I Built It</h2>
+<a id='isocket'></a>
+<h4>isocket&nbsp;
+<span class="text-warning">Senior Software Engineer</span>&nbsp;
+</h4>
+<em>Burlingame CA, New York NY&nbsp;<span class="muted">Mar 2013 -> <span class="text-success">Present</span></span></em>
 <p>
-Collaboratively administrate turnkey channels whereas virtual e-tailers. Objectively seize scalable metrics whereas proactive e-services. Seamlessly empower fully researched growth strategies and interoperable internal or "organic" sources.
+isocket simplifies the direct sales process. Their technology automates the manual steps like order execution and monitoring, helping premium publishers and advertisers do more business directly.</br>
+<a href="https://www.isocket.com/">link</a>
 </p>
+<a id='google'></a>
+<h4>Google&nbsp;
+<span class="text-warning">Software Engineer V</span>&nbsp;
+</h4>
+<em>Mountain View CA, New York NY&nbsp;<span class="muted">Dec 2011 -> March 2013</span></em>
 <p>
-Credibly innovate granular internal or "organic" sources whereas high standards in web-readiness. Energistically scale future-proof core competencies vis-a-vis impactful experiences. Dramatically synthesize integrated schemas with optimal networks.
+<strong>Google.org Crisis Response Team</strong></br>
+When disaster strikes, people turn to the internet for information. We help ensure the right information is there in these times of need by building tools to collect and share emergency information, and by supporting first responders in using technology to help improve and save lives.</br>
+<a href="http://www.google.org/crisisresponse/">link</a></p>
+<p>  
+<strong>Google Public Alerts</strong></br>
+Being prepared is just as important as knowing what to do in a crisis. Public Alerts provide a warning before disasters cause damage, so searching for "Hurricane info" in Miami when there is an alert for the East coast would trigger a Public Alert and give you time to prepare.</br>
+<a href="http://www.google.org/intl/en_US/crisisresponse/publicalerts/">link</a>
 </p>
+<a id='admeld'></a>
+<h4>Admeld&nbsp;
+<span class="text-warning">Senior Software Engineer</span>&nbsp;
+</h4>
+<em>New York NY&nbsp;<span class="muted">Aug 2008 -> Dec 2011</span></em>
 <p>
-Interactively procrastinate high-payoff content without backward-compatible data. Quickly cultivate optimal processes and tactical architectures. Completely iterate covalent strategic theme areas via accurate e-markets.
+Since 2008, Admeld has led the industry in helping premium publishers maximize their ad revenue and simplify their operations. Admeld pioneered the private ad exchange and built technology that made it easy for publishers to identify new opportunities and control how every impression is sold.</br>
+<a href="http://admeld.com/">link</a>
 </p>
-<p>
-Globally incubate standards compliant channels before scalable benefits. Quickly disseminate superior deliverables whereas web-enabled applications. Quickly drive clicks-and-mortar catalysts for change before vertical architectures.
-</p>
-<p>
-Enthusiastically leverage existing premium quality vectors with enterprise-wide innovation. Phosfluorescently leverage others enterprise-wide "outside the box" thinking with e-business collaboration and idea-sharing. Proactively leverage other resource-leveling convergence rather than inter-mandated networks.
-</p>
-<p>
-Rapaciously seize adaptive infomediaries and user-centric intellectual capital. Collaboratively unleash market-driven "outside the box" thinking for long-term high-impact solutions. Enthusiastically engage fully tested process improvements before top-line platforms.
-</p>
-<p>
-Efficiently myocardinate market-driven innovation via open-source alignments. Dramatically engage high-payoff infomediaries rather than client-centric imperatives. Efficiently initiate world-class applications after client-centric infomediaries.
-</p>
-<p>
-Phosfluorescently expedite impactful supply chains via focused results. Holistically generate open-source applications through bleeding-edge sources. Compellingly supply just in time catalysts for change through top-line potentialities.
+<a id='monitor'></a>
+<h4>Monitor110&nbsp;<span class="label label-info">Lead Software Engineer</span></h4>
+<em>New York, NY :: Mar 2005 -> Jul 2008</em>
+<a id='nrsi'></a>
+<h4>Nat'l Reading Styles Institute&nbsp;<span class="label label-info">Consultant, Software Engineer</span></h4>
+<em>New York, NY :: Oct 2001 -> Mar 2005</em>
+<a id='suss'></a>
+<h4>SuSS MicroTec&nbsp;<span class="label label-info">Senior Software Engineer</span></h4>
+<em>Ste. Jeorie FRANCE / Dresden GERMANY / Waterbury VT :: Aug 2000 -> Oct 2001</em>
+<a id='nrsi'></a>
+<h4>IBM&nbsp;<span class="label label-info">Software Engineer</span></h4>
+<em>Essex Junction, VT :: Sep 1999 -> Oct 2001</em>
+
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
