work in progress

--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
 <head>
 <title>Brian Starke</title>
 <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/flatly/bootstrap.min.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/styles/main.css">
 </head>
 <body class="container">
 <div class="navbar navbar-fixed-top opague">
   <div class="navbar-inner">
     <ul class="nav">
-      <li class="active"><a href="#">Work</a></li>
+      <li class="active"><a href="#">brianstarke</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           Stuff I Built&nbsp;<b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-          <li><a tabindex="-1" href="#search">Search Engines</a></li>
-          <li><a tabindex="-1" href="#analytics">Analytics UI</a></li>
-          <li><a tabindex="-1" href="#webauto">Web Scraping Platform</a></li>
+          <li><a tabindex="-1" href="#search">Inventory Search</a></li>
+          <li><a tabindex="-1" href="#analytics">Cross Portal Search</a></li>
+          <li><a tabindex="-1" href="#webauto">UGC Categorizer</a></li>
           <li><a tabindex="-1" href="#browser">Browser Extensions</a></li>
           <li><a tabindex="-1" href="#datums">Data Aggregation</a></li>
           <li><a tabindex="-1" href="#codegen">Code Generation</a></li>
@@ -34,10 +35,15 @@
           <li><a tabindex="-1" href="#admeld">Admeld</a></li>
           <li><a tabindex="-1" href="#monitor">Monitor110</a></li>
           <li><a tabindex="-1" href="#nrsi">Nat'l Reading Styles Institute</a></li>
-          <li><a tabindex="-1" href="#suss">SuSS MicroTec</a></li>
+          <li><a tabindex="-1" href="#suss">SUSS MicroTec</a></li>
           <li><a tabindex="-1" href="#ibm">IBM</a></li>
         </ul>
       </li>
+    </ul>
+    <ul class="nav pull-right">
+      <li><a href="https://github.com/brianstarke" target="_blank"><b class="icon-github"></b> </a></li>
+      <li><a href="https://twitter.com/brianstarke" target="_blank"><b class="icon-twitter"></b> </a></li>
+      <li><a href="http://www.linkedin.com/in/brianstarke/" target="_blank"><b class="icon-linkedin"></b> </a></li>
     </ul>
   </div>
 </div>
@@ -45,34 +51,49 @@
 <div class="main-container">
 <h2>Stuff I Built</h2>
 <a id='search'></a>
-<h4>Search Engines</h4>
+<h4>Inventory Search <span class="label label-info">isocket</span></h4>
 <p>
 Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
 </p>
-<a id='analytics'></a>
-<h4>Analytics UI</h4>
+<h4>Cross Portal Search <span class="label label-warning">Admeld</span></h4>
 <p>
-Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
 </p>
-<a id='webauto'></a>
-<h4>Web Scraping Platform</h4>
+<h4>UGC Content Categorizer <span class="label label-inverse">Monitor110</span></h4>
 <p>
-Completely synergize resource sucking relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
 </p>
-<a id='browser'></a>
-<h4>Browser Extensions</h4>
+<h4>RTB Analytics <span class="label label-warning">Admeld</span></h4>
 <p>
-Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
 </p>
-<a id='datums'></a>
-<h4>Data Aggregation</h4>
+<h4>Web Automation <span class="label label-warning">Admeld</span></h4>
 <p>
-Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products.
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
 </p>
-<a id='codegen'></a>
-<h4>Code Generation</h4>
+<h4>Data Aggregator <span class="label label-warning">Admeld</span></h4>
 <p>
-Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
+</p>
+<h4>Disaster Alerts in Google Search <span class="label label-success">Google</span></h4>
+<p>
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
+</p>
+<h4>Power Outage Maps During Hurricane Sandy <span class="label label-success">Google</span></h4>
+<p>
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
+</p>
+<h4>Magicbus <span class="label label-info">isocket</span></h4>
+<p>
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
+</p>
+<h4>Chromeld / Firemeld <span class="label label-warning">Admeld</span></h4>
+<p>
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
+</p>
+<h4>Dogfort <span class="label">Side Project</span></h4>
+<p>
+Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
 </p>
 
 <h2>Where I Built It</h2>
@@ -122,15 +143,33 @@ Monitor110 gathered information from over 130 million sources of various types, 
 <a href="/images/m110_screenshot.gif" target="_blank">screenshot</a>
 </p>
 <a id='nrsi'></a>
-<h4>Nat'l Reading Styles Institute&nbsp;<span class="label label-info">Consultant, Software Engineer</span></h4>
-<em>New York, NY :: Oct 2001 -> Mar 2005</em>
+<h4>Nat'l Reading Styles Institute&nbsp;
+<span class="text-warning">Consultant, Software Engineer</span>&nbsp;
+</h4>
+<em>New York NY&nbsp;<span class="muted">Oct 2001 -> Mar 2005</span></em>
+<p>
+NRSI is a research-based educational organization dedicated to improving literacy.</br>
+<a href="http://www.nrsi.com" target="_blank">link</a> <span class="muted"><small>(I swear I didn't build this terrible site)</small></span>
+</p>
 <a id='suss'></a>
-<h4>SuSS MicroTec&nbsp;<span class="label label-info">Senior Software Engineer</span></h4>
-<em>Ste. Jeorie FRANCE / Dresden GERMANY / Waterbury VT :: Aug 2000 -> Oct 2001</em>
-<a id='nrsi'></a>
-<h4>IBM&nbsp;<span class="label label-info">Software Engineer</span></h4>
-<em>Essex Junction, VT :: Sep 1999 -> Oct 2001</em>
-
+<h4>SUSS MicroTec&nbsp;
+<span class="text-warning">Software Engineer</span>&nbsp;
+</h4>
+<em>Ste Jeorie FRANCE, Vonnigen GERMANY, Waterbury VT&nbsp;<span class="muted">Aug 2000 -> Oct 2001</span></em>
+<p>
+SUSS MicroTec is a leading supplier of process equipment for microstructuring in the semiconductor industry and related markets. Their portfolio covers a comprehensive range of products and solutions for backend lithography, wafer bonding and photomask processing, complemented by micro-optical components.</br>
+<a href="http://www.suss.com/" target="_blank">link</a>
+</p>
+<a id='ibm'></a>
+<h4>International Business Machines&nbsp;
+<span class="text-warning">Software Engineer</span>&nbsp;
+</h4>
+<em>Binghamton NY, Essex Junction VT&nbsp;<span class="muted">Sep 1999 -> Oct 2001</span></em>
+<p>
+IBM microelectronics delivers application-optimized semiconductor technologies designed to take performance, integration and power efficiency to the next level in solutions spanning mobile and wired, from consumer products to robots that do 
+really well on Jeopardy.</br>
+<a href="http://www.ibm.com/us/en/" target="_blank">link</a> 
+</p>
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
